--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@anantakumarghosh/npm-test",
+  "name": "@zackyypackyy/npm-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
